# simpleServer

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
src/rpc/: CMakeLists.txt  index.html.cpp  readme.md  resources.h  rpc.js.cpp  rpcClient.cpp  rpcClient.h  rpcServer.cpp  rpcServer.h  styles.css.cpp
src/rpc/test/: rpctest.cpp
src/simpleServer/: .gitignore  CMakeLists.txt  HTTPHandler.cpp  HTTPHandler.h  TCPListener.cpp  TCPListener.h  abstractAsyncProvider.h  abstractConnection.h  abstractService.h  abstractStream.cpp  abstractStream.h  abstractStreamAsync.h  abstractStreamFactory.h  address.cpp  address.h  async.cpp  async.h  asyncProvider.cpp  asyncProvider.h  base64.cpp  base64.h  chunkedStream.cpp  chunkedStream.h  common.cpp  connection.cpp  connection.h  defer.h  dispatcher.h  epoll.cpp  epoll.h  epollAsync.cpp  epollAsync.h  exceptions.cpp  exceptions.h  headerParser.cpp  headerParser.h  html_escape.h  http_client.cpp  http_client.h  http_dynpathmap.cpp  (+43 more)
src/simpleServer/common/: dispatcher.h  msgqueue.h  mtcounter.h  raii.h  stringpool.h
src/simpleServer/linux/: address.cpp  async.h  epoll.cpp  epollAsync.cpp  epollAsync.h  fileStream.cpp  fileStream.h  linuxAsync.cpp  linuxAsync.h  linuxService.cpp  linuxService.h  linuxWaitingSlot.cpp  linuxWaitingSlot.h  localAddr.h  netEventDispatcher.cpp  netEventDispatcher.h  realpath.cpp  socketConnection.cpp  socketConnection.h  socketObject.h  ssl_exceptions.h  ssl_socket.cpp  ssl_socket.h  tcpStream.cpp  tcpStream.h  tcpStreamFactory.cpp  tcpStreamFactory.h  tcplistenimpl.cpp  tcplistenimpl.h
src/tests/: .gitignore  CMakeLists.txt  linuxTests.cpp  main.cpp  srvtest.cpp  svctest.cpp  testClass.h  wscli.cpp
